feat: enhance font configuration and optimize performance in layout and globals

--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "eslint-config-next": "15.5.2",
     "tailwindcss": "^4",
     "typescript": "^5"
-  }
+  },
+  "browserslist": [
+    "defaults and supports es6-module",
+    "maintained node versions"
+  ]
 }
